# test_fastapi_mcp

./: .env.example  .todo  README.md  ia_agent.py  mcp_server.py  notebook.ipynb  notes.todo  pyproject.toml  server.py
module/agent/: ia_agent.py
module/api/: server.py
module/api/routes/: agent.py  items.py
